--- a/client/src/components/ProductCard.css
+++ b/client/src/components/ProductCard.css
@@ -3,14 +3,10 @@
     flex: 0 1 34rem;
     margin: 1rem;
     height: 28rem;
+    width: 16rem;
     margin-left: 2rem;
     margin-top: 3rem;
     margin-bottom: 2rem;
-    transition: transform .2s;
-}
-
-.product-card:hover {
-    transform: scale(1.1);
 }
 
 .border-solid {
@@ -23,16 +19,23 @@
 }
 
 .border-buttom {
-    border-radius: 2rem;
+    height: 2.5rem;
+    width: 8rem;
+    border-radius: 5px;
+    background-color: #7F00FF;
+    color: white;
+    border: none;
 }
+
 
 .image {
     margin-top: 1rem;
     height: 200px;
+    transition: transform .2s;
 }
 
-.border-img {
-    border-radius: 10px;
+.image:hover {
+    transform: scale(1.2);
 }
 
 .button-heart {
