--- a/client/src/components/ProductCard.css
+++ b/client/src/components/ProductCard.css
@@ -1,18 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 .product-card {
-    height: 32rem;
+    height: 30rem;
     width: 19rem;
     padding: 1rem;
     margin-left: 1rem;
     margin-top: 3rem;
     margin-bottom: 2rem;
-    display: flex;
-    justify-content: center;
-}
-
-
-.border-solid {
-    padding-bottom: 15px;
-    border-bottom: 1px #c0c0c0 solid;
+    position: relative;
+    background-color: white;
+    border-radius: 20px;
 }
 
 .border-card {
@@ -20,8 +17,8 @@
 }
 
 .border-buttom {
-    height: 2.5rem;
-    width: 8rem;
+    height: 2.8rem;
+    width: 9rem;
     border-radius: 5px;
     background-color: #7F00FF;
     color: white;
@@ -31,8 +28,9 @@
 
 .image {
     margin-top: 1rem;
-    height: 200px;
+    height: 15rem;
     transition: transform .2s;
+    background-color: brown;
 }
 
 .image:hover {
@@ -45,6 +43,38 @@
     background: none;   
 }
 
-.price-cart-stock {
-   
+.container-name-description {
+    position: relative;
+    height: 6rem;
+    background-color: blueviolet;
+}
+
+.stock-price-cart {
+    position: relative;
+}
+
+.title-card {
+    display: relative;
+    font-family: 'Roboto';
+    font-size: 25px;
+    width: 15rem;
+    text-align: center;
+    margin-left: 7px;
+    margin-top: 2rem;
+}
+
+.description-card {
+    padding-bottom: 15px;
+    border-bottom: 1px #c0c0c0 solid;
+    font-size: 20px;
+}
+
+.price-card {
+    font-size: 28px;
+    position: relative;
+    top: 15px
+}
+
+.stock-card {
+    font-size: 18px;
 }
