--- a/client/src/components/SideComponent.css
+++ b/client/src/components/SideComponent.css
@@ -33,9 +33,12 @@ body {
 
 .lowest {
     position: relative;
-    right: 2px
+    right: 2px;
+    border: none;
+    background-color: transparent;
 }
 
 .highest {
-
+    border: none;
+    background-color: transparent;
 }
