--- a/client/src/components/ProductCard.css
+++ b/client/src/components/ProductCard.css
@@ -19,7 +19,7 @@
     height: 2.8rem;
     width: 9rem;
     border-radius: 5px;
-    background-color: #7F00FF;
+    background-color: #8a2be2;
     color: white;
     border: none;
 }
