--- a/client/src/components/ProductsMati.css
+++ b/client/src/components/ProductsMati.css
@@ -52,6 +52,8 @@
     display: flex;
     align-items: center;
     margin-left: 2rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
 }
 
 .products-image-div-second {
