conexion redux no anda el filtrar por precio

--- a/client/src/components/Catalogo.css
+++ b/client/src/components/Catalogo.css
@@ -20,3 +20,11 @@
   margin-top: 4rem;
   margin-left: 10rem;
 }
+
+.spinner-catalogo {
+  color: #8a2be2;
+  width: 6rem;
+  height: 6rem;
+  margin-left: 30rem;
+  margin-top: 20rem;
+}
