paginacion diseño-order-bryan correccion-register

--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -104,3 +104,28 @@
 .sign-up-button {
     margin-right: 2rem;
 }
+
+.button-register {
+    border: none;
+    height: 2.5rem;
+    width: 5rem;
+    background-color: #8a2be2;
+    color: white;
+    border-radius: 5px;
+}
+.button-register:hover {
+    border: none;
+    height: 2.5rem;
+    width: 5rem;
+    background-color: darkviolet;
+    color: white;
+    border-radius: 5px;
+}
+.button-register:focus {
+    border: none;
+    height: 2.5rem;
+    width: 5rem;
+    background-color: darkviolet;
+    color: white;
+    border-radius: 5px;
+}
