--- a/client/src/components/LandingPage.css
+++ b/client/src/components/LandingPage.css
@@ -1,75 +1,76 @@
 .landing {
-    background-color: #592a9c;
-    height: 100vh;
-    position: fixed;
+  background-color: #592a9c;
+  height: 100vh;
+  position: fixed;
 }
 
 .landing-container {
-    width: 90%;
-    height: 80vh;
-    position: relative;
-    left: 100px;
-    top: 100px;
-    box-shadow: 1px 10px 50px 20px#8a2be2;
+  width: 90%;
+  height: 80vh;
+  position: relative;
+  left: 100px;
+  top: 100px;
+  box-shadow: 1px 10px 50px 20px#8a2be2;
 }
 
 .card-image {
-    position: relative;
-    bottom: 700px;
-    left: 100px;
+  position: relative;
+  bottom: 700px;
+  left: 100px;
 }
 
 .content-container {
-    position: relative;
-    bottom: 1350px;
-    left: 1300px;
+  position: relative;
+  bottom: 400px;
+  left: 50px;
 }
 
 .title-cyber {
-    font-size: 5rem;
-    color: white;
+  font-size: 5rem;
+  color: white;
 }
 
 .subtitle-shop {
-    font-size: 3rem;
-    color: white;
-    margin-top: 2px;
+  font-size: 3rem;
+  color: white;
+  margin-top: 2px;
 }
 
 .get-started {
-    border: none;
-    height: 4rem;
-    width: 22rem;
-    background-color: #8a2be2;
-    border-radius: 50px;
-    color: white;
-    font-size: 2rem;
+  border: none;
+  height: 4rem;
+  width: 22rem;
+  right: 22px;
+  background-color: #8a2be2;
+  border-radius: 50px;
+  color: white;
+  font-size: 2rem;
 }
 
 .get-started:hover {
-    background-color: #8029d0;
+  background-color: #8029d0;
 }
 
 .landing-sign-in {
-    color: white;
-    font-size: 20px;
-    position: relative;
-    bottom: 152px;
-    left: 400px;
+  color: white;
+  font-size: 20px;
+  position: relative;
+  bottom: 152px;
+  left: 400px;
 }
 
 .landing-sign-up {
-    color: white;
-    font-size: 20px;
-    position: relative;
-    bottom: 200px;
-    left: 500px;
+  color: white;
+  font-size: 20px;
+  position: relative;
+  bottom: 200px;
+  left: 500px;
 }
 
 /* 
 --------------------------------------------Para bryan----------------------------------------------- */
- 
- /* .landing {
+
+/* .landing {
     background-color: #592a9c;
     height: 100vh;
     position: fixed;
@@ -136,7 +137,6 @@
     bottom: 127px;
     left: 400px;
 } */
-
 
 /*--------------------------------------------------Compu-Mati------------------------------------------------*/
 
