--- a/client/src/components/NavbarGeneral.css
+++ b/client/src/components/NavbarGeneral.css
@@ -133,3 +133,29 @@ header{
 
 /*Apply styles after scroll end*/
 
+/*-----------------------------------------------------------------------------------*/
+
+.navegacion-general {
+    position: fixed;
+}
+
+.background-al-nav-general {
+    background: #8E2DE2;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #8E2DE2, #4A00E0);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #8E2DE2, #4A00E0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+/* .searchbar-navbar {
+    position: relative;
+    left: 450px;
+}
+
+.cart-icono-navbar {
+    position: relative;
+    left: 300px
+}
+
+.admin-icono-navbar {
+    position: relative;
+    left: 200px
+} */
