--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -90,6 +90,7 @@
     background-color: #8a2be2;
     color: white;
     border-radius: 5px;
+    font-size: 17px;
 }
 .button-search-bar:hover {
     border: none;
