--- a/client/src/components/NavbarGeneral.css
+++ b/client/src/components/NavbarGeneral.css
@@ -1,135 +1,177 @@
 *,
 *::before,
-*::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.fontuse{
-    font-family: 'Roboto', sans-serif;
-    font-size: 5px;
+.fontuse {
+  font-family: "Roboto", sans-serif;
+  font-size: 5px;
 }
 
-header{
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    transition: background-color .5s ease;
-    z-index: 1000;
+header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  transition: background-color 0.5s ease;
+  z-index: 1000;
 }
 
-.image-brand{
-    /* width: 25px; */
-    margin-left: 10px;
-    padding-left: 10px;
+.image-brand {
+  /* width: 25px; */
+  margin-left: 10px;
+  padding-left: 10px;
 }
 
-.container{
-    width: 100%;
-    max-width: 120rem;
-    margin: 0 auto;
-    padding: 0 1.5rem;
+.container {
+  width: 100%;
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 0 1.5rem;
 }
 
-.nav{
-    width: 100%;
-    height: 10rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 2px solid rgba(255,255,255,.05);
-    transition: height .5s ease;
+.nav {
+  width: 100%;
+  height: 10rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.05);
+  transition: height 0.5s ease;
 }
 
-.nav a{
-    text-decoration: none;
-    color: #fff;
-    font-size: 1.6rem;
+.nav a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.6rem;
 }
 
-.nav .logo{
-    font-size: 3rem;
-    font-weight: bold;
-    color: #fff;
-    margin-right: 2rem;
+.nav .logo {
+  font-size: 3rem;
+  font-weight: bold;
+  color: #fff;
+  margin-right: 2rem;
 }
 
-.nav .searchbar{
-    font-size: 1.5rem;
-    font-weight: bold;
+.nav .searchbar {
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
-.nav-list{
-    list-style: none;
-    display: flex;
-    margin-right: auto;
-    margin-left: 12rem;
+.nav-list {
+  list-style: none;
+  display: flex;
+  margin-right: auto;
+  margin-left: 12rem;
 }
 
-.nav-link{
-    margin: 0 2rem;
-    position: relative;
+.nav-link {
+  margin: 0 2rem;
+  position: relative;
 }
 
-.nav-link::after{
-    content: '';
-    width: 100%;
-    height: 2px;
-    background-color: #fff;
-    position: absolute;
-    left: 0;
-    bottom: -3px;
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: transform .5s ease;
+.nav-link::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  position: absolute;
+  left: 0;
+  bottom: -3px;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s ease;
 }
 
-.nav-link:hover::after{
-    transform: scaleX(1);
+.nav-link:hover::after {
+  transform: scaleX(1);
 }
 
-#nav-cta{
-    display: inline-block;
-    background-color: #fff;
-    color: #313131;
-    padding: 1rem 2rem;
-    border-radius: 2rem;
-    transition: background-color .5s ease;
+#nav-cta {
+  display: inline-block;
+  background-color: #fff;
+  color: #313131;
+  padding: 1rem 2rem;
+  border-radius: 2rem;
+  transition: background-color 0.5s ease;
 }
 
-#nav-cta:hover{
-    background-color: #d3d3d3;
+#nav-cta:hover {
+  background-color: #d3d3d3;
 }
-
 
 /*Apply styles after scroll*/
-.scrolling-active{
-    background-color: rgba(101, 18, 153, 0.753);
-    box-shadow: 0 3px 1rem rgba(0,0,0,.1);
+.scrolling-active {
+  background-color: rgba(101, 18, 153, 0.753);
+  box-shadow: 0 3px 1rem rgba(0, 0, 0, 0.1);
 }
 
-.scrolling-active .nav{
-    height: 7.6rem;
+.scrolling-active .nav {
+  height: 7.6rem;
 }
 
-.scrolling-active .nav a{
-    color: #fff;
+.scrolling-active .nav a {
+  color: #fff;
 }
 
-.scrolling-active #nav-cta{
-    background-color: #fff;
-    color: #720081;
+.scrolling-active #nav-cta {
+  background-color: #fff;
+  color: #720081;
 }
 
-.scrolling-active #nav-cta:hover{
-    background-color: #fff;
+.scrolling-active #nav-cta:hover {
+  background-color: #fff;
 }
 
-.scrolling-active .nav-link::after{
-    background-color: #fff;
+.scrolling-active .nav-link::after {
+  background-color: #fff;
 }
 
 /*Apply styles after scroll end*/
 
+/*-----------------------------------------------------------------------------------*/
+
+.navegacion-general {
+  position: fixed;
+}
+
+.background-al-nav-general {
+  background: #8e2de2; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #8e2de2,
+    #4a00e0
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #8e2de2,
+    #4a00e0
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.searchbar-navbar {
+  position: relative;
+  left: 400px;
+}
+
+.cart-icono-navbar {
+  position: relative;
+  left: 200px;
+  color: #fff;
+}
+
+.admin-icono-navbar {
+  position: relative;
+  top: 20px;
+  left: 250px;
+  color: #fff;
+}
+
+.nav-sign {
+  position: relative;
+  height: 4rem;
+  top: 15px;
+}
