--- a/client/src/components/Users/UserLoged.css
+++ b/client/src/components/Users/UserLoged.css
@@ -1,5 +1,6 @@
 #dropdown-basic-button{
     background-color: #000000;
     display: flex;
-    margin-left: 30rem;
+    margin-left: 2.5rem;
+    margin-top: 1.75rem;
 }
