--- a/client/src/components/Users/Profile.css
+++ b/client/src/components/Users/Profile.css
@@ -10,9 +10,9 @@
   background-color: white;
 }
 
-.products-title {
-  font-size: 40px;
-  text-align: center;
+.flex-orders {
+  font-size: 25px;
+  align-items: center;
   margin-top: 2rem;
   margin-right: 2rem;
 }
