--- a/client/src/components/ProductsMati.css
+++ b/client/src/components/ProductsMati.css
@@ -1,8 +1,8 @@
 .products-container {
-    /* margin-top: 4rem; */
+    margin-top: 4rem;
     margin-bottom: 4rem;
     background-color: white;
-    margin-top: -350px;
+    margin-top: -250px;
 }
 .reviews-container {
     margin-top: 0px;
