--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -66,11 +66,11 @@
     font-size: 75%;
 }
 
-.brand {
-}
+/* .brand {
+} */
 
-.sign {
-}
+/* .sign {
+} */
 
 .image-brand {
     margin-bottom: 1rem;
