--- a/client/src/components/ProductCard.css
+++ b/client/src/components/ProductCard.css
@@ -9,6 +9,8 @@
     margin-bottom: 2rem;
     position: relative;
     background-color: white;
+    box-shadow: 3px 3px 8px -2px rgb(53, 49, 56);
+    border-radius: 10px;
 }
 
 .border-card {
