--- a/client/src/components/ProductsMati.css
+++ b/client/src/components/ProductsMati.css
@@ -2,12 +2,15 @@
     /* margin-top: 4rem; */
     background-color: white;
     margin-top: -250px;
-
+    box-shadow: 5px 5px 10px -2px rgb(53, 49, 56);
+    border-radius: 15px;
 }
 .reviews-container {
     background-color: white;
     position: relative;
-    bottom: 150px
+    bottom: 150px;
+    box-shadow: 5px 5px 10px -2px rgb(53, 49, 56);
+    border-radius: 15px;
 }
 
 .products-title {
