--- a/client/src/components/Reviews/Reviews.css
+++ b/client/src/components/Reviews/Reviews.css
@@ -3,6 +3,7 @@ li{
   list-style: none;
   flex-direction: row;
 }
+
 .filled{
   background-color: #8a2be2;
   border-radius: 100px;
@@ -42,6 +43,10 @@ li{
 .bigStars{
   color: #8a2be2;
   font-size: 2em;
+}
+.smallStars{
+  color: #8a2be2;
+  font-size: 1.5em;
 }
 progress[value]::-webkit-progress-bar {
   background-color: #eee;
