--- a/client/src/components/SideComponent.css
+++ b/client/src/components/SideComponent.css
@@ -46,6 +46,8 @@
 
 .sideComponent {
     background-color: white;
+    box-shadow: 3px 3px 8px -2px rgb(53, 49, 56);
+    border-radius: 10px;
 }
 
 body {
