imagenes por default

--- a/client/src/components/ProductsMati.css
+++ b/client/src/components/ProductsMati.css
@@ -62,6 +62,11 @@
     margin-bottom: 2rem;
 }
 
+.uniamgen{
+    height: 500px;
+    width: 500px;
+}
+
 .products-image {
     height: 600px;
     width: 600px;
