--- a/client/src/components/Catalogo.css
+++ b/client/src/components/Catalogo.css
@@ -5,7 +5,7 @@
   }
   
 .catalogo {
-  margin-top: -350px;
+  margin-top: -450px;
   
 }
 
@@ -40,7 +40,12 @@
   margin-top: 20rem;
 }
 
-@media (max-width: 1100px) {
+.filter-categories {
+  display: none;
+  opacity: 0;
+}
+
+@media (max-width: 1300px) {
   .catalogo {
     margin-top: -350px;
     
@@ -50,9 +55,20 @@
     margin-right: 0px;
     margin-left: 20px;box-shadow: 5px 5px 10px -2px rgb(53, 49, 56);
     border-radius: 15px;
+    display: none;
   }
 
   .margin-right-catalogo {
     margin-right: 0px;
+  }
+
+  .filter-categories {
+    opacity: 1;
+    position: relative;
+    bottom: 300px;
+  }
+  
+  .margin-right-catalogo {
+    width: 100%;
   }
 }
