--- a/client/src/components/ProductCard.css
+++ b/client/src/components/ProductCard.css
@@ -9,6 +9,8 @@
     margin-bottom: 2rem;
     position: relative;
     background-color: white;
+    box-shadow: 3px 3px 8px -2px rgb(53, 49, 56);
+    border-radius: 10px;
 }
 
 .border-card {
@@ -87,3 +89,17 @@
 .stock-card {
     font-size: 18px;
 }
+
+@media (max-width: 1100px) {
+    
+.product-card {
+    height: 28rem;
+    width: 19rem;
+    padding: 1rem;
+    margin-left: 1rem;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    position: relative;
+    background-color: white;
+}
+  }
