--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,7 @@ html, body {
     font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
+    background-color: #dedede !important;
   }
   
   #root {
