--- a/client/src/components/CartUsage/CartUse.css
+++ b/client/src/components/CartUsage/CartUse.css
@@ -28,7 +28,7 @@
 }
 
 .cart-text {
-  color: #d9d9d9;
+  color: black;
   background: #e8e8e8;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 200%;
