--- a/client/src/components/checkout/Checkout.css
+++ b/client/src/components/checkout/Checkout.css
@@ -51,3 +51,12 @@
   font-weight: 200;
   color: blue;
 }
+
+.input-payment-danger {
+  border: 2px solid red;
+}
+
+.p-payment-danger {
+  color: red;
+  font-size: 10px;
+}
